# taskforge-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SKILL_EVALUATIONS.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_user_role.py  003_add_mfa_columns.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: admin.py  auth.py  health.py  notes.py  tasks.py  users.py
app/core/: __init__.py  audit.py  config.py  database.py  logging_config.py  metrics.py  middleware.py  notify.py  rate_limit.py  security.py
app/db/: base.py  mixins.py  session.py
app/models/: __init__.py  note.py  task.py  user.py
app/schemas/: auth.py  note.py  task.py  user.py
app/services/: auth_service.py  base.py  note_service.py  task_service.py
deploy/: GITOPS.md  README.md  SECRETS.md
deploy/argocd/: application-prod.yaml  application.yaml
deploy/examples/: argocd-application.yaml
deploy/external-secrets/: README.md  external-secret.yaml
deploy/kustomize/base/: configmap.yaml  deployment.yaml  kustomization.yaml  network-policy.yaml  secret.yaml  service.yaml
deploy/kustomize/overlays/dev/: kustomization.yaml  patch.yaml  secret.yaml
deploy/kustomize/overlays/prod/: external-secret.yaml  kustomization.yaml  network-policy-patch.yaml  patch.yaml
docs/: DATA-PROTECTION.md  MFA-DESIGN.md  N8N-NOTIFICATIONS.md  ZERO-TRUST-IMPROVEMENTS.md
observability/: README.md  loki-labeling-guidance.md  prometheus-alerts.example.yml  prometheus-scrape.example.yml
observability/grafana/: README.md  taskforge-overview.json
scripts/: dev.sh  format.bat  format.ps1  test.sh
tests/: conftest.py  test_admin.py  test_auth.py  test_config.py  test_health.py  test_notes.py  test_tasks.py
